edr framework release

--- a/.env.sample
+++ b/.env.sample
@@ -13,7 +13,7 @@ GROQ_API_KEY=""
 
 JINA_API_KEY=""
 
-MAX_WEB_RESEARCH_LOOPS=10
+MAX_WEB_RESEARCH_LOOPS=3
 FETCH_FULL_PAGE=True
 
 LLM_PROVIDER=google
@@ -37,10 +37,10 @@ LLM_MODEL=gemini-2.5-pro
 # LLM_MODEL=DeepSeek-V3-0324
 
 ## Activity generation configuration ##
-# ENABLE_ACTIVITY_GENERATION=true
-# ACTIVITY_VERBOSITY=medium
-# ACTIVITY_LLM_PROVIDER=openai
-# ACTIVITY_LLM_MODEL=o3-mini
+ENABLE_ACTIVITY_GENERATION=true
+ACTIVITY_VERBOSITY=medium
+ACTIVITY_LLM_PROVIDER=google
+ACTIVITY_LLM_MODEL=gemini-2.5-flash
 
 LANGCHAIN_TRACING_V2=true
 LANGCHAIN_ENDPOINT=""
