--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 python-dotenv>=1.0.0
+langchain-core>=0.3.78,<1.0.0
 langchain>=0.3.9
 langchain_openai>=0.2.11
 langchain_anthropic>=0.3.10
 langchain_groq>=0.0.3
 langchain_google_genai>=2.1.3
+langchain_google_vertexai>=2.0.0,<3.0.0
 groq>=0.4.2
 openai>=1.6.0
 anthropic>=0.49.0
@@ -16,7 +18,6 @@ scikit-learn==1.6.1
 langgraph==0.3.22
 langgraph-checkpoint==2.0.23
 tavily-python>=0.5.0
-langchain-core>=0.3.45
 requests>=2.32.0
 typing-extensions>=4.0.0
 pydantic>=2.5.2
@@ -31,6 +32,7 @@ numpy<2.0.0
 plotly>=5.0.0
 sse-starlette>=2.2.1
 python-multipart>=0.0.6
+nest-asyncio>=1.5.0
 
 # File processing dependencies
 PyPDF2>=3.0.1
